# cpp-modern-2025-10-29

./: CMakeLists.txt  README.md
_exercises/ex-algorithms-with-lambdas/: basic_algorithms.cpp  lambda_expressions.cpp
_exercises/ex-constexpr/: constexpr_ex.cpp
_exercises/ex-constexpr-if/: constexprif_ex.cpp
_exercises/ex-move-semantics/: paragraph.hpp  tests_move_semantics.cpp  tests_move_semantics_2.cpp
_exercises/ex-optional/: optional_ex.cpp
_exercises/ex-shared-ptr/: observer.cpp
_exercises/ex-string-view/: string_view_ex.cpp
_exercises/ex-unique-ptr/: fwd_list.hpp  tests_fwd_list.cpp
_exercises/ex-variant/: CMakeLists.txt  visitors_ex.cpp
_exercises/ex_auto_declarations/: CMakeLists.txt  auto_declarations_ex.cpp
_exercises/ex_find_null/: find_null.cpp
_project-template/: feature.cpp
any/: tests_any.cpp
class-features/: class_features.cpp
constexpr/: constexpr.cpp
core-features/: tests_enumerations.cpp  tests_ifs.cpp  tests_nullptr.cpp  tests_range_based_for.cpp  tests_type_deduction.cpp  tests_uniform_init_syntax.cpp
lambdas/: lambdas.cpp
move-semantics/: gadget.hpp  move_semantics_1.cpp  move_semantics_2.cpp  move_semantics_3.cpp  move_semantics_motivation.cpp  perfect_forwarding.cpp
optional/: tests_optional.cpp
small-features/: gadget.cpp  gadget.hpp  tests_small_features.cpp
smart-pointers/: CMakeLists.txt  shared_ptr_cycles.cpp  shared_ptr_leaks.cpp  smart_pointers.cpp  utils.hpp
string-view/: tests_string_view.cpp
templates/: tests_ctad.cpp  tests_templates.cpp  tests_variadic_templates.cpp
tuples-structured-bindings/: tests_structured_bindings.cpp  tests_tuples.cpp
variant/: tests_variants.cpp
